<resources>
    <string name="app_name">Lunch Tray</string>
    <string name="tile_start_order">Order</string>
    <string name="title_coupons">Coupons</string>
    <string name="title_entree_menu">Entrees</string>
    <string name="title_side_menu">Sides</string>
    <string name="title_accompaniment_menu">Accompaniments</string>
    <string name="title_checkout">Checkout</string>
    <string name="start_order">Start Order</string>
    <string name="subtotal">Subtotal: %s</string>
    <string name="tax">Tax: %s</string>
    <string name="total">Total: %s</string>
    <string name="next">Next</string>
    <string name="order_summary">Order Summary</string>
    <string name="submit">Submit Order</string>
    <string name="submit_order">Order Submitted!</string>
    <string name="cancel">Cancel</string>
</resources>
