<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/startOrderFragment">

    <fragment
        android:id="@+id/startOrderFragment"
        android:name="im.syf.lunchtray.ui.order.StartOrderFragment"
        android:label="@string/tile_start_order"
        tools:layout="@layout/fragment_start_order">

        <action
            android:id="@+id/to_entreeFragment"
            app:destination="@id/entreeFragment" />

    </fragment>

    <fragment
        android:id="@+id/entreeFragment"
        android:name="im.syf.lunchtray.ui.order.EntreeFragment"
        android:label="@string/title_entree_menu"
        tools:layout="@layout/fragment_entree">

        <action
            android:id="@+id/to_sideFragment"
            app:destination="@id/sideFragment" />

        <action
            android:id="@+id/to_startOrderFragment"
            app:destination="@id/startOrderFragment"
            app:popUpTo="@id/startOrderFragment"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/sideFragment"
        android:name="im.syf.lunchtray.ui.order.SideFragment"
        android:label="@string/title_side_menu"
        tools:layout="@layout/fragment_side">

        <action
            android:id="@+id/to_accompanimentFragment"
            app:destination="@id/accompanimentFragment" />

        <action
            android:id="@+id/to_startOrderFragment"
            app:destination="@id/startOrderFragment"
            app:popUpTo="@id/startOrderFragment"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/accompanimentFragment"
        android:name="im.syf.lunchtray.ui.order.AccompanimentFragment"
        android:label="@string/title_accompaniment_menu"
        tools:layout="@layout/fragment_accompaniment">

        <action
            android:id="@+id/to_checkoutFragment"
            app:destination="@id/checkoutFragment" />

        <action
            android:id="@+id/to_startOrderFragment"
            app:destination="@id/startOrderFragment"
            app:popUpTo="@id/startOrderFragment"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/checkoutFragment"
        android:name="im.syf.lunchtray.ui.order.CheckoutFragment"
        android:label="@string/title_checkout"
        tools:layout="@layout/fragment_checkout">

        <action
            android:id="@+id/to_startOrderFragment"
            app:destination="@id/startOrderFragment"
            app:popUpTo="@id/startOrderFragment"
            app:popUpToInclusive="true" />

    </fragment>

</navigation>
